Allow target JVM to be declared for libraries and applications that target the JVM.